[package]
name = "http-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version= "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
