[package]
name = "http-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.2.0"
flate2 = "1.0.35"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version= "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
