[package]
name = "http-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "7.0.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2.0"
flate2 = "1.0.35"
hickory-resolver = { version = "0.24.2", features = ["tokio-runtime"] }
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version= "1.5", features = ["server", "http1", "client", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
url = "2.5.4"
zstd = "0.13.2"
